Fix header element spacing

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -107,29 +107,33 @@
     width: 100%;
   }
   .school-header {
+    display: inline-block;
     height: 100%;
     .school-image {
       height: 100%;
       width: 100%;
       float: none;
       img {
+        position: relative;
         width: 100%;
         height: 100%;
         max-height: 300px;
         float: none;
       }
     }
+    .school-text {
+      width: 100%;
+    }
     .school-title {
+      display: inline-block;
       float: none;
       width: 100%;
-      padding: 0 0 0 15px;
+      padding: 0 15px 0 15px;
     }
     .grades-served {
+      display: inline-block;
       width: 100%;
-      position: relative;
-      bottom: 0;
-      left: 0;
-      margin-top: 15px;
+      margin: 15px 0 0 0;
     }
   }
   .info-bar {
